--- a/FinalChallengeApp/Base.lproj/Profile~.storyboard
+++ b/FinalChallengeApp/Base.lproj/Profile~.storyboard
@@ -3,9 +3,26 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Profile-->
+        <scene sceneID="1yx-fV-X7e">
+            <objects>
+                <viewController id="slk-u9-ffR" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="KrK-S7-Edr">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="wIb-Qa-V28"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Profile" id="Qat-JM-e66"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dFB-gZ-d5c" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1477" y="832"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="bpE-O5-skr">
             <objects>
@@ -18,7 +35,7 @@
                     <connections>
                         <segue destination="e6t-wx-8sf" kind="relationship" relationship="viewControllers" id="FKd-Qj-m6o"/>
                         <segue destination="e6m-3W-fOi" kind="relationship" relationship="viewControllers" id="yz0-w0-WrD"/>
-                        <segue destination="JzD-Zo-axd" kind="relationship" relationship="viewControllers" id="dPH-D7-T5t"/>
+                        <segue destination="slk-u9-ffR" kind="relationship" relationship="viewControllers" id="dPH-D7-T5t"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="apc-eL-BOP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -33,7 +50,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vIu-wR-ypo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="476" y="539"/>
+            <point key="canvasLocation" x="380" y="540"/>
         </scene>
         <!--Materials-->
         <scene sceneID="h8v-rb-W7r">
@@ -43,17 +60,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NxT-q4-uQo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="854" y="540"/>
-        </scene>
-        <!--Profile-->
-        <scene sceneID="o2h-ZV-1YE">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Profile" id="JzD-Zo-axd" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="IDz-lp-Hoo"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="PMy-S2-8pA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1236" y="539"/>
+            <point key="canvasLocation" x="854" y="832"/>
         </scene>
     </scenes>
 </document>
