--- a/FinalChallengeApp/View/FinalChallengeApp/Base.lproj/Students.storyboard
+++ b/FinalChallengeApp/View/FinalChallengeApp/Base.lproj/Students.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hm9-KI-3VW">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JLt-p9-X3O">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Students-->
+        <!--Students View Controller-->
         <scene sceneID="R5k-xG-qt2">
             <objects>
                 <viewController id="hm9-KI-3VW" customClass="StudentsViewController" customModule="FinalChallengeApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -15,22 +15,105 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Students" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lRo-Gm-T64">
-                                <rect key="frame" x="173" y="438" width="69" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Bht-aX-avv">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="studentCell" rowHeight="65" id="WZe-l1-5xP" customClass="StudentsTableViewCell" customModule="FinalChallengeApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="65"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="WZe-l1-5xP" id="gRi-gW-LR5">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="65"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kFw-bj-cOI">
+                                                    <rect key="frame" x="20" y="6" width="53" height="53"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0k2-E9-pLJ">
+                                                    <rect key="frame" x="81" y="6" width="313" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2HU-kH-a9E">
+                                                    <rect key="frame" x="81" y="35" width="313" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="studentImage" destination="kFw-bj-cOI" id="VYe-E8-CWs"/>
+                                            <outlet property="studentName" destination="0k2-E9-pLJ" id="5U8-Y0-X42"/>
+                                            <outlet property="studentSchedule" destination="2HU-kH-a9E" id="hvs-Dt-Lbi"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="hm9-KI-3VW" id="MmE-Xb-kwZ"/>
+                                    <outlet property="delegate" destination="hm9-KI-3VW" id="OZc-Bj-8XW"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="K6q-6A-I90" firstAttribute="trailing" secondItem="Bht-aX-avv" secondAttribute="trailing" id="7F3-Y3-3ck"/>
+                            <constraint firstItem="K6q-6A-I90" firstAttribute="bottom" secondItem="Bht-aX-avv" secondAttribute="bottom" id="Z95-6V-Pit"/>
+                            <constraint firstItem="Bht-aX-avv" firstAttribute="leading" secondItem="K6q-6A-I90" secondAttribute="leading" id="eNl-1b-YCT"/>
+                            <constraint firstItem="Bht-aX-avv" firstAttribute="top" secondItem="K6q-6A-I90" secondAttribute="top" id="jVr-jJ-dyt"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="K6q-6A-I90"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Students" id="Bw1-0m-OdF"/>
+                    <navigationItem key="navigationItem" id="vFQ-1V-U0u">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="qUn-Qc-Izy"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="Bht-aX-avv" id="896-KZ-H4o"/>
+                        <segue destination="wYF-fh-5YR" kind="show" identifier="showStudentReport" id="3rd-xg-fE9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DjU-jb-wPV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="230" y="832"/>
+            <point key="canvasLocation" x="1139.1304347826087" y="831.69642857142856"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="VBJ-gp-cAZ">
+            <objects>
+                <viewController id="wYF-fh-5YR" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="NO7-5A-VAO">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="xHv-Bz-O6o"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="HiH-sD-C79"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PGn-2A-aMd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2022" y="832"/>
+        </scene>
+        <!--Students-->
+        <scene sceneID="hZm-IH-neX">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="JLt-p9-X3O" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Students" id="Bw1-0m-OdF"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="7tk-LG-dbY">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="hm9-KI-3VW" kind="relationship" relationship="rootViewController" id="ghz-pp-5qO"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wUP-ac-YpD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="228.98550724637684" y="831.69642857142856"/>
         </scene>
     </scenes>
 </document>
