--- a/FinalChallengeApp/View/FinalChallengeApp/Base.lproj/Students.storyboard
+++ b/FinalChallengeApp/View/FinalChallengeApp/Base.lproj/Students.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JLt-p9-X3O">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="81m-JS-Wsw">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
@@ -133,15 +133,129 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="V0d-rt-tyO"/>
                     </view>
-                    <navigationItem key="navigationItem" id="hyE-Wc-AaS"/>
+                    <navigationItem key="navigationItem" id="hyE-Wc-AaS">
+                        <barButtonItem key="rightBarButtonItem" systemItem="compose" id="HKF-4a-yO0">
+                            <connections>
+                                <segue destination="3HD-r0-5Ss" kind="show" identifier="showAddReport" id="O8K-YH-yGU"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="segmentedControl" destination="Ts6-g7-oKh" id="vRO-YF-ThM"/>
                         <outlet property="tableView" destination="AhA-RL-CPH" id="GEY-72-zPn"/>
+                        <segue destination="81m-JS-Wsw" kind="show" identifier="showDetailReport" id="jAk-QA-Trv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zQE-PR-Uah" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2002.8985507246377" y="830.35714285714278"/>
+        </scene>
+        <!--Report's Detail-->
+        <scene sceneID="I8U-a0-4wu">
+            <objects>
+                <viewController id="81m-JS-Wsw" customClass="DetailViewController" customModule="FinalChallengeApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0Gl-uK-jzB">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oHG-nK-2Lo">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="detailCell" rowHeight="128" id="QzZ-Fx-GzO" customClass="DetailTableViewCell" customModule="FinalChallengeApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="128"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="QzZ-Fx-GzO" id="JDG-Xm-foC">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YKX-IX-iHV">
+                                                    <rect key="frame" x="16" y="16" width="382" height="21"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F5b-aO-4PE">
+                                                    <rect key="frame" x="16" y="45" width="382" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tis-IC-ZcB">
+                                                    <rect key="frame" x="16" y="69" width="382" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="efp-YV-H79">
+                                                    <rect key="frame" x="330" y="84" width="68" height="28"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <state key="normal" title="View Detail"/>
+                                                    <connections>
+                                                        <action selector="viewDetailtapped:" destination="81m-JS-Wsw" eventType="touchUpInside" id="unr-9p-zDz"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="YKX-IX-iHV" secondAttribute="trailing" constant="16" id="1CD-GF-i7Y"/>
+                                                <constraint firstItem="F5b-aO-4PE" firstAttribute="leading" secondItem="JDG-Xm-foC" secondAttribute="leading" constant="16" id="5ta-NJ-B0e"/>
+                                                <constraint firstItem="F5b-aO-4PE" firstAttribute="top" secondItem="YKX-IX-iHV" secondAttribute="bottom" constant="8" id="64f-Y0-E59"/>
+                                                <constraint firstItem="Tis-IC-ZcB" firstAttribute="top" secondItem="F5b-aO-4PE" secondAttribute="bottom" constant="6" id="6u8-cX-opK"/>
+                                                <constraint firstItem="YKX-IX-iHV" firstAttribute="leading" secondItem="JDG-Xm-foC" secondAttribute="leading" constant="16" id="Ae0-kb-i9C"/>
+                                                <constraint firstAttribute="trailing" secondItem="efp-YV-H79" secondAttribute="trailing" constant="16" id="Nxk-7m-HjN"/>
+                                                <constraint firstAttribute="bottom" secondItem="efp-YV-H79" secondAttribute="bottom" constant="16" id="ZBE-zd-6BM"/>
+                                                <constraint firstItem="YKX-IX-iHV" firstAttribute="top" secondItem="JDG-Xm-foC" secondAttribute="top" constant="16" id="ai9-FQ-0rQ"/>
+                                                <constraint firstAttribute="trailing" secondItem="Tis-IC-ZcB" secondAttribute="trailing" constant="16" id="jgD-ZH-gCh"/>
+                                                <constraint firstAttribute="trailing" secondItem="F5b-aO-4PE" secondAttribute="trailing" constant="16" id="rj7-E3-wOC"/>
+                                                <constraint firstItem="Tis-IC-ZcB" firstAttribute="leading" secondItem="JDG-Xm-foC" secondAttribute="leading" constant="16" id="zJs-OR-XQ5"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="activityLabel" destination="YKX-IX-iHV" id="gqY-aM-BJM"/>
+                                            <outlet property="mediaLabel" destination="Tis-IC-ZcB" id="GLu-IS-UXY"/>
+                                            <outlet property="promptLabel" destination="F5b-aO-4PE" id="RrN-ha-r3W"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="81m-JS-Wsw" id="cbr-De-kjc"/>
+                                    <outlet property="delegate" destination="81m-JS-Wsw" id="EYe-UQ-7Rh"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="oHG-nK-2Lo" firstAttribute="leading" secondItem="i4F-KT-N1t" secondAttribute="leading" id="37g-Hm-CUI"/>
+                            <constraint firstItem="i4F-KT-N1t" firstAttribute="bottom" secondItem="oHG-nK-2Lo" secondAttribute="bottom" id="8q3-Ix-zWf"/>
+                            <constraint firstItem="i4F-KT-N1t" firstAttribute="trailing" secondItem="oHG-nK-2Lo" secondAttribute="trailing" id="AAJ-yP-3tV"/>
+                            <constraint firstItem="oHG-nK-2Lo" firstAttribute="top" secondItem="i4F-KT-N1t" secondAttribute="top" id="Jxa-x2-Dao"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="i4F-KT-N1t"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Report's Detail" id="NzN-Bs-da4"/>
+                    <connections>
+                        <outlet property="tableView" destination="oHG-nK-2Lo" id="Y7J-7b-Q6f"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mBW-fl-3Rf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2847.826086956522" y="1263.6160714285713"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="DjP-Ob-5zh">
+            <objects>
+                <viewController id="3HD-r0-5Ss" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mHb-4t-wvQ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="EW2-Al-361"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="sDl-qj-IN9"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Tal-Rt-qOL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2849" y="517"/>
         </scene>
         <!--Students-->
         <scene sceneID="hZm-IH-neX">
